Preventing overflowing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,7 @@
 @import url(https://fonts.googleapis.com/css?family=Yellowtail);
 
 .container {
-
+  overflow: hidden;
 }
 
 .content {
